修改docker跟项目的配置

--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,11 @@
 DB_USERNAME = "codepush"
 DB_PASSWORD = "123456"
 DB_NAME = "codepush"
-DB_HOST = "127.0.0.1"
-DB_PORT = "3308"
+DB_HOST = "db"
+DB_PORT = "3306"
 DB_DIALECT = "mysql"
-REDIS_HOST = "127.0.0.1"
-REDIS_PORT = "6388"
+REDIS_HOST = "redis"
+REDIS_PORT = "6379"
 STORAGE_TYPE = "oss"
 TOKEN_SECRET: ""
 
