--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,24 +3,8 @@ services:
   code-push:
     build: .
     container_name: code-push
-    environment:
-      NODE_ENV: "production"
-      DB_USERNAME: "codepush"
-      DB_PASSWORD: "123456"
-      DB_NAME: "codepush"
-      DB_HOST: "127.0.0.1"
-      DB_PORT: "3308"
-      DB_DIALECT: "mysql"
-      REDIS_HOST: "127.0.0.1"
-      REDIS_PORT: "6388"
-      STORAGE_TYPE: "oss"
-      OSS_ACCESS_KEY_ID: "REPLACE_YOUR_OSS_ACCESS_KEY_ID"
-      OSS_SECRET_ACCESS_KEY: "REPLACE_YOUR_OSS_SECRET_ACCESS_KEY"
-      OSS_END_POINT: "REPLACE_YOUR_OSS_END_POINT"
-      OSS_BUCKET_NAME: "REPLACE_YOUR_OSS_BUCKET_NAME"
-      OSS_PREFIX: ""
-      OSS_DOWNLOAD: "REPLACE_YOUR_OSS_DOWNLOAD"
-      TOKEN_SECRET: "REPLACE_YOUR_RANDOM_SECRET"
+    volumes:
+      - ./:/app
     deploy:
       resources:
         limits:
@@ -29,12 +13,12 @@ services:
         condition: on-failure
     ports:
       - "3000:3000"
-    network_mode: host
     depends_on:
       - db
       - redis
   db:
     image: mysql:5.7.23
+    container_name: mysql
     volumes:
       - data-mysql:/var/lib/mysql
       - ./sql/codepush-all.sql:/docker-entrypoint-initdb.d/codepush-all.sql
@@ -42,19 +26,16 @@ services:
       - "3308:3306"
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "On"
-    networks:
-      - dbnet
+
   redis:
+    container_name: redis
     image: redis:4.0.11-alpine
     volumes:
       - data-redis:/data
-    ports:
-      - "6388:6379"
-    networks:
-      - redisnet
-networks:
-  redisnet:
-  dbnet:
+    # ports:
+    #   - "6388:6379"
+
 volumes:
   data-mysql:
   data-redis:
+    
